# MSVCDocker

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.wine  Makefile  README.md  Vagrantfile  azure-pipelines.yml
dockertools/: clang-cl  diffenv  hack-vcvars.sh  make-vcclang-vars  vcentrypoint  vcwine  winecmd  wineexec  xvfbwine
examples/: Dockerfile  Makefile  README.md  get_oracle_jdk.sh
examples/test/: CMakeLists.txt
examples/test/csharp/: CMakeLists.txt  HelloWorld.cs  HelloworldNative.cpp
examples/test/java/: CMakeLists.txt  HelloWorld.java  HelloWorld_JNI.cpp
examples/test/python/: CMakeLists.txt  HelloWorldPy.cpp
examples/test/tcl/: CMakeLists.txt  HelloWorld.tcl  HelloWorldTcl.cpp
msvcdocker/: Dockerfile
msvcdocker/dockertools/: hackvcvars  lld-link  msc_ver.cpp  vcentrypoint
msvcdocker/test/: CMakeLists.txt  helloworld.cpp
test/: CMakeLists.txt  helloworld.cpp
vagranttools/: box_env  compare-snapshots.bat  downloadbasebox.sh  setup_basic.ps1  setup_msvc.ps1  setupbasebox.sh  snapshot.bat  ssh_provisioner.rb
